# encrypted-communication

./: CMakeLists.txt  README.md  test_x86.cpp
comm/: CMakeLists.txt
comm/headers/: IComm.h  UART.h  comm_config.h
comm/src/: UART.cpp
math/: CMakeLists.txt
math/headers/: FastMath.h  PrimeGenerator.h
math/src/: FastMath.cpp  PrimeGenerator.cpp
rfd/: CMakeLists.txt
rfd/core/: Node.cpp  RFD.cpp
rfd/core/headers/: Node.h  RFD.h  RemoteNode.h
rfd/core/src/: Node.cpp  RFD.cpp
rfd/headers/: rfd_config.h
rfd/packets/: HelloPacket.cpp  Packet.cpp  PingPacket.cpp  SignedMessagePacket.cpp
rfd/packets/headers/: AckPacket.h  AllPackets.h  HelloPacket.h  KeyPacket.h  Packet.h  PacketHandler.h  PacketHeader.h  PingPacket.h  SignedMessagePacket.h
rfd/packets/src/: AckPacket.cpp  HelloPacket.cpp  KeyPacket.cpp  Packet.cpp  PacketHandler.cpp  PingPacket.cpp  SignedMessagePacket.cpp
rfd/src/: Packet.cpp  Packet.h  RFD.cpp  RFD.h
rsa/: CMakeLists.txt  rsa-test.cpp
rsa/headers/: Key.h  RSA.h  config.h
rsa/src/: FastMath.cpp  FastMath.h  Key.cpp  PrimeGenerator.cpp  PrimeGenerator.h  RSA.cpp  RSA.h  config.h
src/: main.cpp  run.cpp
